rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
#define caxpy                     CAXPY
#define ccopy                     CCOPY
#define cdotc                     CDOTC
#define cdotu                     CDOTU
#define cswap                     CSWAP
#define dasum                     DASUM
#define daxpy                     DAXPY
#define dcopy                     DCOPY
#define ddot                      DDOT
#define dsdot                     DSDOT
#define dswap                     DSWAP
#define dzasum                    DZASUM
#define icamax                    ICAMAX
#define icamin                    ICAMIN
#define idamax                    IDAMAX
#define idamin                    IDAMIN
#define isamax                    ISAMAX
#define isamin                    ISAMIN
#define izamax                    IZAMAX
#define izamin                    IZAMIN
#define sasum                     SASUM
#define saxpy                     SAXPY
#define scasum                    SCASUM
#define scopy                     SCOPY
#define sdot                      SDOT
#define sdsdot                    SDSDOT
#define sswap                     SSWAP
#define xerbla                    XERBLA
#define zaxpy                     ZAXPY
#define zcopy                     ZCOPY
#define zdotc                     ZDOTC
#define zdotu                     ZDOTU
#define zswap                     ZSWAP
typedef f77_int bla_integer;
typedef f77_char bla_character;
// for -i2
//typedef short flag;
//typedef short ftnlen;
typedef bla_integer ftnlen;
//typedef long int flag;
//typedef long int ftnlen;
typedef bla_integer ftnlen;
BLIS_EXPORT_BLIS void sswap(const f77_int *n, float  *sx, const f77_int *incx, float  *sy, const f77_int *incy);
BLIS_EXPORT_BLIS void scopy(const f77_int *n, const float  *sx, const f77_int *incx, float  *sy, const f77_int *incy);
BLIS_EXPORT_BLIS void saxpy(const f77_int *n, const float  *sa, const float  *sx, const f77_int *incx, float  *sy, const f77_int *incy);
BLIS_EXPORT_BLIS float sdot(const f77_int *n, const float  *sx,  const f77_int *incx,  const float  *sy,  const f77_int *incy);
BLIS_EXPORT_BLIS float sdsdot(const f77_int *n, const float  *sb,  const float  *sx,  const f77_int *incx,  const float  *sy,  const f77_int *incy);
BLIS_EXPORT_BLIS float sasum(const f77_int *n, const float  *sx,  const f77_int *incx);
BLIS_EXPORT_BLIS f77_int isamax(const f77_int *n, const float  *sx, const f77_int *incx);
BLIS_EXPORT_BLIS void dswap(const f77_int *n, double *dx, const f77_int *incx, double *dy, const f77_int *incy);
BLIS_EXPORT_BLIS void dcopy(const f77_int *n, const double *dx, const f77_int *incx, double *dy, const f77_int *incy);
BLIS_EXPORT_BLIS void daxpy(const f77_int *n, const double *da, const double *dx, const f77_int *incx, double *dy, const f77_int *incy);
BLIS_EXPORT_BLIS double ddot(const f77_int *n, const double *dx, const f77_int *incx, const double *dy, const f77_int *incy);
BLIS_EXPORT_BLIS double dsdot(const f77_int *n, const float  *sx, const f77_int *incx, const float  *sy, const f77_int *incy);
BLIS_EXPORT_BLIS double dasum(const f77_int *n, const double *dx, const f77_int *incx);
BLIS_EXPORT_BLIS f77_int idamax(const f77_int *n, const double *dx, const f77_int *incx);
BLIS_EXPORT_BLIS void cswap(const f77_int *n, scomplex  *cx, const f77_int *incx, scomplex  *cy, const f77_int *incy);
BLIS_EXPORT_BLIS void ccopy(const f77_int *n, const scomplex  *cx, const f77_int *incx, scomplex  *cy, const f77_int *incy);
BLIS_EXPORT_BLIS void caxpy(const f77_int *n, const scomplex  *ca, const scomplex  *cx, const f77_int *incx, scomplex  *cy, const f77_int *incy);
BLIS_EXPORT_BLIS scomplex cdotc(const f77_int* n, const scomplex*   x, const f77_int* incx, const scomplex*   y, const f77_int* incy);
BLIS_EXPORT_BLIS scomplex cdotu(const f77_int* n, const scomplex*   x, const f77_int* incx,const scomplex*   y, const f77_int* incy);
BLIS_EXPORT_BLIS dcomplex zdotc(const f77_int* n, const dcomplex*   x, const f77_int* incx, const dcomplex*   y, const f77_int* incy);
BLIS_EXPORT_BLIS dcomplex zdotu(const f77_int* n, const dcomplex*   x, const f77_int* incx, const dcomplex*   y, const f77_int* incy);
BLIS_EXPORT_BLIS void cdotc(scomplex* retval, const f77_int *n, const scomplex  *cx, const f77_int *incx, const scomplex  *cy, const f77_int *incy);
BLIS_EXPORT_BLIS void cdotu(scomplex* retval, const f77_int *n, const scomplex  *cx, const f77_int *incx, const scomplex  *cy, const f77_int *incy);
BLIS_EXPORT_BLIS void zdotc(dcomplex* retval, const f77_int *n, const dcomplex *zx, const f77_int *incx, const dcomplex *zy, const f77_int *incy);
BLIS_EXPORT_BLIS void zdotu(dcomplex* retval, const f77_int *n, const dcomplex *zx, const f77_int *incx, const dcomplex *zy, const f77_int *incy);
BLIS_EXPORT_BLIS float scasum(const f77_int *n, const scomplex  *cx,  const f77_int *incx);
BLIS_EXPORT_BLIS f77_int icamax(const f77_int *n, const scomplex  *cx, const f77_int *incx);
BLIS_EXPORT_BLIS void zswap(const f77_int *n, dcomplex *zx, const f77_int *incx, dcomplex *zy, const f77_int *incy);
BLIS_EXPORT_BLIS void zcopy(const f77_int *n, const dcomplex *zx, const f77_int *incx, dcomplex *zy, const f77_int *incy);
BLIS_EXPORT_BLIS void zaxpy(const f77_int *n, const dcomplex *za, const dcomplex *zx, const f77_int *incx, dcomplex *zy, const f77_int *incy);
BLIS_EXPORT_BLIS double dzasum(const f77_int *n, const dcomplex *zx, const f77_int *incx);
BLIS_EXPORT_BLIS f77_int izamax(const f77_int *n, const dcomplex *zx, const f77_int *incx);
BLIS_EXPORT_BLIS f77_int icamin( const f77_int* n,  const scomplex* x,  const f77_int* incx);
BLIS_EXPORT_BLIS f77_int idamin( const f77_int* n,  const double* x,  const f77_int* incx);
BLIS_EXPORT_BLIS f77_int isamin( const f77_int* n,  const float* x,  const f77_int* incx);
BLIS_EXPORT_BLIS f77_int izamin( const f77_int* n,  const dcomplex* x,  const f77_int* incx);
BLIS_EXPORT_BLIS void xerbla(const char   *srname, const f77_int *info, ftnlen n);
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
typedef int16_t bfloat16;
BLIS_EXPORT_BLAS void PASTEF770(xerbla)(const bla_character *srname, const bla_integer *info, ftnlen srname_len);
BLIS_EXPORT_BLAS float PASTEF77(sd,sdot)
     (
       const f77_int* n,
       const float*   sb,
       const float*   x, const f77_int* incx,
       const float*   y, const f77_int* incy
     );
BLIS_EXPORT_BLAS float PASTEF77S(sd,sdot)
     (
       const f77_int* n,
       const float*   sb,
       const float*   x, const f77_int* incx,
       const float*   y, const f77_int* incy
     );
BLIS_EXPORT_BLAS double PASTEF77(d,sdot)
     (
         const f77_int* n,
         const float*   x, const f77_int* incx,
         const float*   y, const f77_int* incy
     );
BLIS_EXPORT_BLAS double PASTEF77S(d,sdot)
     (
         const f77_int* n,
         const float*   x, const f77_int* incx,
         const float*   y, const f77_int* incy
     );
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;