rstsr-openblas-ffi/src/f77blas.rs

pub type openblas_dojob_callback =
    Option<unsafe extern "C" fn(thread_num: c_int, jobdata: *mut c_void, dojob_data: c_int)>;
pub type openblas_threads_callback = Option<
    unsafe extern "C" fn(
        sync: c_int,
        dojob: openblas_dojob_callback,
        numjobs: c_int,
        jobdata_elsize: usize,
        jobdata: *mut c_void,
        dojob_data: c_int,
    ),
>;
unsafe extern "C" {
    pub fn xerbla(arg1: *mut c_char, info: *mut blas_int, arg2: blas_int) -> c_int;
    pub fn openblas_set_num_threads_(arg1: *mut c_int);
    pub static mut openblas_threads_callback_: openblas_threads_callback;
    pub fn sdot(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> f32;
    pub fn sdsdot(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
    ) -> f32;
    pub fn dsdot(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> f64;
    pub fn ddot(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    ) -> f64;
    pub fn qdot(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    ) -> xdouble;
    pub fn sbdot(
        arg1: *mut blas_int,
        arg2: *mut bfloat16,
        arg3: *mut blas_int,
        arg4: *mut bfloat16,
        arg5: *mut blas_int,
    ) -> f32;
    pub fn sbstobf16(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut bfloat16,
        arg5: *mut blas_int,
    );
    pub fn sbdtobf16(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut bfloat16,
        arg5: *mut blas_int,
    );
    pub fn sbf16tos(
        arg1: *mut blas_int,
        arg2: *mut bfloat16,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    );
    pub fn dbf16tod(
        arg1: *mut blas_int,
        arg2: *mut bfloat16,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    );
    pub fn cdotu(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> openblas_complex_float;
    pub fn cdotc(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    ) -> openblas_complex_float;
    pub fn zdotu(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    ) -> openblas_complex_double;
    pub fn zdotc(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    ) -> openblas_complex_double;
    pub fn xdotu(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    ) -> openblas_complex_xdouble;
    pub fn xdotc(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    ) -> openblas_complex_xdouble;
    pub fn saxpy(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
    );
    pub fn daxpy(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
    );
    pub fn qaxpy(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut xdouble,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
    );
    pub fn caxpy(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
    );
    pub fn zaxpy(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
    );
    pub fn xaxpy(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut xdouble,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
    );
    pub fn caxpyc(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut f32,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut blas_int,
    );
    pub fn zaxpyc(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut blas_int,
    );
    pub fn xaxpyc(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut xdouble,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
    );
    pub fn scopy(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    );
    pub fn dcopy(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    );
    pub fn qcopy(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    );
    pub fn ccopy(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    );
    pub fn zcopy(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    );
    pub fn xcopy(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    );
    pub fn sswap(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    );
    pub fn dswap(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    );
    pub fn qswap(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    );
    pub fn cswap(
        arg1: *mut blas_int,
        arg2: *mut f32,
        arg3: *mut blas_int,
        arg4: *mut f32,
        arg5: *mut blas_int,
    );
    pub fn zswap(
        arg1: *mut blas_int,
        arg2: *mut f64,
        arg3: *mut blas_int,
        arg4: *mut f64,
        arg5: *mut blas_int,
    );
    pub fn xswap(
        arg1: *mut blas_int,
        arg2: *mut xdouble,
        arg3: *mut blas_int,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
    );
    pub fn sasum(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn scasum(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dasum(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qasum(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn dzasum(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxasum(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn ssum(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn scsum(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dsum(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qsum(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn dzsum(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxsum(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn isamax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn idamax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn iqamax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn icamax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn izamax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn ixamax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn ismax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn idmax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn iqmax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn icmax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn izmax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn ixmax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn isamin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn idamin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn iqamin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn icamin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn izamin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn ixamin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn ismin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn idmin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn iqmin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn icmin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> blas_int;
    pub fn izmin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> blas_int;
    pub fn ixmin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> blas_int;
    pub fn samax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn damax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qamax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn scamax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dzamax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxamax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn samin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn damin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qamin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn scamin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dzamin(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxamin(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn smax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dmax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qmax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn scmax(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
    pub fn dzmax(arg1: *mut blas_int, arg2: *mut f64, arg3: *mut blas_int) -> f64;
    pub fn qxmax(arg1: *mut blas_int, arg2: *mut xdouble, arg3: *mut blas_int) -> xdouble;
    pub fn smin(arg1: *mut blas_int, arg2: *mut f32, arg3: *mut blas_int) -> f32;
